2005-04-12  David Hyatt  <hyatt@apple.com>

	Working on the Acid2 test, Row 1.

	Improve checkChild for the DTD so that it knows what mode a document is in.  This allows it to adhere more
	strictly to the actual DTD in strict mode and almost strict mode.

	Change the <table>-inside-<p> check so that <table> is disallowed inside <p> in 
	strict mode and almost strict mode.  This matches Firefox behavior, which allows <table>
	inside <p> only in quirks mode.

        * khtml/html/dtd.cpp:
        (DOM::checkChild):
        * khtml/html/dtd.h:
        * khtml/html/htmlparser.cpp:
        (KHTMLParser::insertNode):
        * khtml/html/htmltokenizer.cpp:
        (khtml::HTMLTokenizer::parseTag):
        * khtml/xml/dom_elementimpl.cpp:
        (ElementImpl::childAllowed):

2005-04-12  Vicki Murley  <vicki@apple.com>

        Reviewed by Maciej. 

	- fixed <rdar://problem/3760895> Request for including an implementation of the elementFromPoint function
 
        * khtml/dom/dom_doc.cpp:
        (DOM::Document::elementFromPoint):
        * khtml/dom/dom_doc.h:
        * khtml/ecma/kjs_dom.cpp:
        (DOMDocumentProtoFunc::tryCall):
        * khtml/ecma/kjs_dom.h:
        (KJS::DOMDocument::):
        * khtml/ecma/kjs_dom.lut.h:
        (KJS::):
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::elementFromPoint):
        * khtml/xml/dom_docimpl.h:

2005-04-12  David Hyatt  <hyatt@apple.com>

	Beginning of work to support the Acid2 CSS test put forward by the Web Standards Project.  Fix
	our handling of the rel attribute on <link> elements to do a proper tokenization so that stylesheets
	can be recognized even when other keywords are present in the rel attribute.

        * khtml/html/html_headimpl.cpp:
        (HTMLLinkElementImpl::HTMLLinkElementImpl):
        (HTMLLinkElementImpl::parseHTMLAttribute):
        (HTMLLinkElementImpl::tokenizeRelAttribute):
        (HTMLLinkElementImpl::process):
        * khtml/html/html_headimpl.h:
